--- a/clothes/templates/clothes/index.html
+++ b/clothes/templates/clothes/index.html
@@ -45,11 +45,12 @@ JOSRAM
 }
 
 #destacate {
-    margin: 1rem auto 3rem auto;
+    margin: 0rem auto 3rem auto;
     padding: 2rem;
-    background-color: rgb(0, 0, 0);
+    background-color: #1d1b1b;
     justify-content: center;
 }
+
 
 </style>
 {% include "clothes/includes/style.html" %}
