--- a/clothes/templates/clothes/includes/header-filter.html
+++ b/clothes/templates/clothes/includes/header-filter.html
@@ -9,6 +9,7 @@
     margin: 0 auto;
     text-align: center;
   }
+ 
 </style>
 {% endblock %}
 
@@ -23,7 +24,7 @@
         <ul class="nav nav-pills flex-column flex-sm-row">
           <li class="nav-item">
             <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
-              <p class="nav-link">
+              <p class="nav-link" style="color:black;">
                 <i class="bi bi-filter-square"></i>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter-square" viewBox="0 0 16 16">
                   <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
@@ -33,7 +34,7 @@
               </p>
               <ul class="nav nav-pills">
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black;">
                     Colores
                   </a>
                   <ul class="dropdown-menu">
@@ -50,7 +51,7 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black;">
                     Precio
                   </a>
                   <ul class="dropdown-menu">
@@ -91,9 +92,12 @@
               </ul>
             </div>
           </li>
+          <li style="padding-left:500px;">
+
+          </li>
   
-          <li class="nav-item dropdown" style="padding-left:500px;">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <li class="nav-item dropdown" id="order">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black;">
               Ordenar por:
             </a>
             <ul class="dropdown-menu">
@@ -109,20 +113,10 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <p class="nav-link" data-bs-toggle="dropdown" aria-expanded="false">
+            <p class="nav-link" data-bs-toggle="dropdown" aria-expanded="false" style="color:black;">
               {{ clothes_number }} Productos
             </p>
-            <ul class="dropdown-menu">
-              {% for color in colors %}
-                {% for key, value in color.items %}
-                <li>
-                  <label>
-                    <input type="submit" value="{{ value }}" name="color_filter" class="dropdown-item">
-                  </label>
-                </li>
-                {% endfor %}
-              {% endfor %}
-            </ul>
+       
           </li>
         </ul>
       </div>
