--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,34 @@
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "base.css" %}"/>
-
+    <link rel="stylesheet" href="{% static "clothes/footer.css" %}"/>
+    <style>
+      .nav li a {
+        text-decoration: none; /* Remove default underline */
+        color: white;
+      }
+      
+      .nav li a:hover {
+        text-decoration: underline; /* Add underline on hover */
+      }
+    
+     
+      #siguenos {
+        margin: 1rem auto 3rem auto;
+        padding: 2rem;
+        background-color: rgb(255, 255, 255);
+        justify-content: center;
+      }
+      .card div a {
+        text-decoration: none; /* Remove default underline */
+        color: black;
+      }
+      
+      .card div a:hover {
+        text-decoration: underline; /* Add underline on hover */
+      }
+      
+  </style>
     {% block css_files %}
   
     {% endblock %}
