--- a/clothes/templates/clothes/gender-clothes.html
+++ b/clothes/templates/clothes/gender-clothes.html
@@ -25,50 +25,49 @@ JOSRAM - {{gender.title}}
     
     {% include 'clothes/includes/header-filter.html' %}
     {% if page_obj %}
-      <div class="filters">
-        <ul class="nav nav-pills">
-      {% if nav_colors %}
-            {% for color in nav_colors %}
-            <form action="{% url "gender-clothes" gender %}" method="POST">
-              {% csrf_token %}
-              <li class="nav-item dropdown">
-                <label class="btn btn-outline-dark rounded-pill px-3"> 
-                  <input type="hidden" value="{{ color }}" name="color">
-                    {{color}} 
-                  <button type="submit" name="delete_color" class="btn-close" aria-label="Close"></button>
-                </label>
-              </li>
-            </form>
-            {% endfor %}
-         
+    <div class="filters mx-5">
+      <ul class="nav nav-pills">
+        {% if nav_colors %}
+        {% for color in nav_colors %}
+        <form action="{% url "gender-clothes" gender %}" method="POST">
+          {% csrf_token %}
+          <li class="nav-item dropdown mx-1">
+            <label class="badge bg-dark-subtle text-dark-emphasis rounded-pill">
+              <input type="hidden" value="{{ color }}" name="color">
+              {{color}}
+              <button type="submit" name="delete_color" class="btn-close" aria-label="Close"></button>
+            </label>
+          </li>
+        </form>
+        {% endfor %}
         {% endif %}
-      
+
         {% if nav_prices %}
-          <form action="{% url "gender-clothes" gender %}" method="POST">
-            {% csrf_token %}
-            <li class="nav-item dropdown">
-              <label class="btn btn-outline-dark rounded-pill px-3"> 
-                {% load custom_filters %}
-                <input type="hidden" value="{{ nav_prices}}" name="price">
-                  {{nav_prices.0|currency}} - {{nav_prices.1|currency}}
-                <button type="submit" name="delete_price" class="btn-close" aria-label="Close"></button>
-              </label>
-            </li>
-          </form>
+        <form action="{% url "gender-clothes" gender %}" method="POST">
+          {% csrf_token %}
+          <li class="nav-item dropdown mx-1">
+            <label class="badge bg-dark-subtle text-dark-emphasis rounded-pill">
+              {% load custom_filters %}
+              <input type="hidden" value="{{ nav_prices }}" name="price">
+              {{nav_prices.0|currency}} - {{nav_prices.1|currency}}
+              <button type="submit" name="delete_price" class="btn-close" aria-label="Close"></button>
+            </label>
+          </li>
+        </form>
         {% endif %}
-      
+
         {% if nav_prices or nav_colors %}
         <form action="{% url "gender-clothes" gender %}" method="POST">
           {% csrf_token %}
           <li class="nav-item dropdown">
-            <button class="btn btn-secondary rounded-pill px-3" type="submit" name="delete_filters"> 
-              Eliminar todos 
+            <button class="badge bg-dark-subtle text-dark-emphasis rounded-pill" type="submit" name="delete_filters">
+              Eliminar todos
             </button>
           </li>
         </form>
         {% endif %}
       </ul>
-      </div>
+    </div>
     
       <div class="album py-0 bg-body-tertiary">
         <div class="container">
