--- a/policies/templates/policies/changes-devolutions.html
+++ b/policies/templates/policies/changes-devolutions.html
@@ -11,13 +11,35 @@ Devoluciones y cambios
 
 {% block content %}
 
-<div class="px-4 pt-5 my-5 text-center border-bottom">
-    <h1 class="display-4 fw-bold text-body-emphasis">Pólitica de Cambios y Devoluciones</h1>
+<div class="px-4 pt-2 text-center">
+<h1 class="display-4 fw-bold text-body-emphasis">Política de Cambios y Devoluciones</h1>
+</div>
+
+<div class="px-4 pt-2 my-5 text-justify border-bottom">
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <div class="align-items-start">
+        <h4>DEVOLUCIONES / CAMBIOS</h4>
+      </div>
+      
+      <p class="mb-4 lead">
+        Siempre hacemos nuestro mejor esfuerzo para crear una experiencia de compra excepcional y esperamos que esté satisfecho con su compra.
+         Sin embargo, si necesita devolver un artículo o un pedido, 
+         estaremos encantados de ayudarle.
+          Siempre podrás realizar una devolución dentro de los 14 días siguientes a la recepción del paquete.  <br>
+        <strong>Tenga en cuenta que usted es responsable del pago de la devolución y del estado de todos los artículos después de haberlos recibido de nuestra parte.</strong> <br>
+
+        La tarifa de devolución por realizar una devolución es la siguiente: 
+        
+        Tarifa de devolución Colombia: 16.000 mil pesos  
+        
+        En Barranquilla siempre ofrecemos un cambio gratuito de talla o color. 
+        
+        Si deseas cambiar un producto y eres de fuera de la Barranquilla, se deducirá una tarifa de cambio de tu pago inicial. 
+        La tarifa de cambio es la misma que la tarifa de devolución para su país. 
+        Puedes encontrar la información sobre la tarifa de devolución para tu país envia un correo a yaohfit@gmail.com.
+      </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+      
       </div>
     </div>
   
