--- a/policies/templates/policies/terms-and-conditions.html
+++ b/policies/templates/policies/terms-and-conditions.html
@@ -11,15 +11,64 @@ Terminos y condiciones
 
 {% block content %}
 
-<div class="px-4 pt-5 my-5 text-center border-bottom">
-    <h1 class="display-4 fw-bold text-body-emphasis">Términos y Condiciones</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-      </div>
-    </div>
-  
+<div class="px-4 pt-2 text-center ">
+  <h1 class="display-4 fw-bold text-body-emphasis">Términos y Condiciones</h1>
   </div>
+  
+  <div class="px-4 pt-2 my-5 text-justify border-bottom">
+      <div class="col-lg-6 mx-auto">
+        <div class="align-items-start">
+          <h4>GENERALIDADES</h4>
+        </div>
+        
+        <p class="mb-4 lead">
+          JOSRAM gestiona este sitio web. En todo el sitio, los términos "nosotros", "nos" y "nuestro" 
+          se refieren en lo sucesivo a Yaohfit. Yaohfit ofrece esta página web, incluida toda la 
+          información, las herramientas y los servicios que se ponen en este sitio a disposición suya, 
+          el usuario, siempre y cuando acepte la totalidad de los términos, condiciones, políticas y 
+          avisos contemplados aquí.<br>
+          <br>
+          Al visitar nuestro sitio y/o comprarnos algo, usted interactúa con nuestro "Servicio" y reconoce 
+          como vinculantes los siguientes términos y condiciones (denominados en lo sucesivo "Términos del 
+          servicio", "Términos"), incluidos aquellos términos y condiciones adicionales y las políticas que
+           se mencionan aquí y/o disponibles por medio de hipervínculo. Estos Términos del servicio se aplican
+            a todos los usuarios del sitio, incluyendo de manera enunciativa mas no limitativa los usuarios
+             que son navegadores, proveedores, clientes, comerciantes y/o que aporten contenido.<br>
+             Lea estos Términos del servicio detenidamente antes de acceder o utilizar nuestra página web. 
+             Al acceder o utilizar cualquier parte del sitio, usted acepta estos Términos del servicio. Si no 
+             acepta la totalidad de los términos y condiciones de este acuerdo, no podrá acceder al sitio web 
+             ni utilizar ningún servicio. Si estos Términos del servicio se considerasen una oferta, la aceptación
+              se limita expresamente a los presentes Términos del servicio.<br>
+        </p>
+
+        <div class="align-items-start">
+          <h4>SECCIÓN 1: TÉRMINOS DE LA TIENDA ONLINE</h4>
+        </div>
+        
+        <p class="mb-4 lead">
+          JOSRAM gestiona este sitio web. En todo el sitio, los términos "nosotros", "nos" y "nuestro" 
+          se refieren en lo sucesivo a Yaohfit. Yaohfit ofrece esta página web, incluida toda la 
+          información, las herramientas y los servicios que se ponen en este sitio a disposición suya, 
+          el usuario, siempre y cuando acepte la totalidad de los términos, condiciones, políticas y 
+          avisos contemplados aquí.<br>
+          <br>
+          Al visitar nuestro sitio y/o comprarnos algo, usted interactúa con nuestro "Servicio" y reconoce 
+          como vinculantes los siguientes términos y condiciones (denominados en lo sucesivo "Términos del 
+          servicio", "Términos"), incluidos aquellos términos y condiciones adicionales y las políticas que
+           se mencionan aquí y/o disponibles por medio de hipervínculo. Estos Términos del servicio se aplican
+            a todos los usuarios del sitio, incluyendo de manera enunciativa mas no limitativa los usuarios
+             que son navegadores, proveedores, clientes, comerciantes y/o que aporten contenido.<br>
+             Lea estos Términos del servicio detenidamente antes de acceder o utilizar nuestra página web. 
+             Al acceder o utilizar cualquier parte del sitio, usted acepta estos Términos del servicio. Si no 
+             acepta la totalidad de los términos y condiciones de este acuerdo, no podrá acceder al sitio web 
+             ni utilizar ningún servicio. Si estos Términos del servicio se considerasen una oferta, la aceptación
+              se limita expresamente a los presentes Términos del servicio.<br>
+
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+        
+        </div>
+      </div>
+    
+    </div>
 {% endblock %}
