--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -6,7 +6,14 @@
 {% endblock %}
 
 {% block css_files %}
-<link rel="stylesheet" href="{% static "blog/comments.css" %}"/>
+<link rel="stylesheet" href="{% static 'blog/comments.css' %}"/>
+<style>
+    .comment-text {
+        max-width: 100%; /* Set the maximum width */
+        overflow-wrap: break-word; /* Allow the text to wrap */
+    }
+    
+</style>
 {% endblock %}
 
 {% block content %}
@@ -85,13 +92,14 @@
                         <div class="pb-3 mb-0 small lh-sm border-bottom w-100 mt-2 mb-0 py-0">
                             <div class="row">
                             
-                            <div class="col-lg-9 ">
-                                <div class="d-flex justify-content-between ">
-                                    <strong class="text-gray-dark mx-2" style="font-size: 20px;">@{{comment.user_name}}</strong>
-                                     
+                                <div class="col-lg-8">
+                                    <div class="comment-text">
+                                        <div class="d-flex justify-content-between">
+                                            <strong class="text-gray-dark mx-0" style="font-size: 20px;">@{{comment.user_name}}</strong>
+                                        </div>
+                                        <span class="d-block mt-1 mx-0">{{ comment.comment}}</span>
+                                    </div>
                                 </div>
-                                <span class="d-block mt-1 mx-2">{{ comment.comment}}</span>
-                            </div>
                           
                         </div>
                         </div>
