--- a/clothes/templates/clothes/includes/header-filter.html
+++ b/clothes/templates/clothes/includes/header-filter.html
@@ -13,12 +13,12 @@
 </style>
 {% endblock %}
 
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container ">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#filterNavbar" aria-controls="filterNavbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="filterNavbar">
+    <div class="collapse navbar-collapse " id="filterNavbar">
       <div class="filters">
         <!-- Filters Section at the start -->
         <ul class="nav nav-pills flex-column flex-sm-row">
