--- a/policies/templates/policies/shipments.html
+++ b/policies/templates/policies/shipments.html
@@ -11,15 +11,45 @@ Envios
 
 {% block content %}
 
-<div class="px-4 pt-5 my-5 text-center border-bottom">
-    <h1 class="display-4 fw-bold text-body-emphasis">Póliticas de Envios</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-      </div>
-    </div>
-  
+<div class="px-4 pt-2 text-center ">
+  <h1 class="display-4 fw-bold text-body-emphasis">Política de Envios</h1>
   </div>
+  
+  <div class="px-4 pt-2 my-5 text-justify border-bottom">
+      <div class="col-lg-6 mx-auto">
+        <div class="align-items-start">
+          <h4>¿JOSRAM HACE ENVÍO?</h4>
+        </div>
+        
+        <p class="mb-4 lead">
+          Siempre hacemos nuestro mejor esfuerzo para crear una experiencia de compra excepcional y esperamos que esté satisfecho con su compra.
+           Sin embargo, si necesita devolver un artículo o un pedido, 
+           estaremos encantados de ayudarle.
+            Siempre podrás realizar una devolución dentro de los 14 días siguientes a la recepción del paquete.  <br>
+        </p>
+        <div class="align-items-start">
+          <h4>¿GASTOS DE ENVÍO?</h4>
+        </div>
+        
+        <p class="mb-4 lead">
+          <strong>En Barranquilla </strong> el envio es de $ 8.000 en todos los pedidos. <br>
+          <strong>En el Atlántico</strong> el envio es de $ 10.000 en todos los pedidos. <br>
+          <strong>En resto del país </strong> el envio es de $ 15.000 en todos los pedidos. <br>
+        
+          <div class="align-items-start">
+          <h4>¿QUÉ PASA SI NO RECOJO MI PAQUETE?</h4>
+        </div>
+        
+        <p class="mb-4 lead">
+          Siempre hacemos nuestro mejor esfuerzo para crear una experiencia de compra excepcional y esperamos que esté satisfecho con su compra.
+           Sin embargo, si necesita devolver un artículo o un pedido, 
+           estaremos encantados de ayudarle.
+            Siempre podrás realizar una devolución dentro de los 14 días siguientes a la recepción del paquete.  <br>
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+        
+        </div>
+      </div>
+    
+    </div>
 {% endblock %}
