Adding the https conexion in environment values

--- a/clothes/templates/clothes/clothes-details.html
+++ b/clothes/templates/clothes/clothes-details.html
@@ -257,6 +257,9 @@
                 <span class="span-stock">Agotado</span></h4>
                 {% endif %}
             </div>
+        </div>
+            <div class="py-1">
+                <small>Los <a href="{% url 'shipments' %}">gastos de envío</a> se calculan en la pantalla de pago.</small>
             </div>
 
             <div class="py-0">
